--- a/stocks.ipynb
+++ b/stocks.ipynb
@@ -12,7 +12,8 @@
     "from selenium.webdriver.common.action_chains import ActionChains\n",
     "from bs4 import BeautifulSoup\n",
     "import datetime, re, requests, io, time, random, string\n",
-    "from credentials import email, password"
+    "from credentials import email, password\n",
+    "from list_of_stocks import stock_list"
    ]
   },
   {
@@ -67,66 +68,6 @@
    ],
    "source": [
     "sign_in(email, password)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stock_list = [\n",
-    "  {'stock_ticker': 'AAPL', 'exchange': 'NASDAQ'},\n",
-    "  {'stock_ticker': 'MSFT', 'exchange': 'NASDAQ'},\n",
-    "  {'stock_ticker': 'AMZN', 'exchange': 'NASDAQ'},\n",
-    "  {'stock_ticker': 'GOOG', 'exchange': 'NASDAQ'},\n",
-    "  {'stock_ticker': 'GOOGL', 'exchange': 'NASDAQ'},\n",
-    "  {'stock_ticker': 'FB', 'exchange': 'NASDAQ'},\n",
-    "  {'stock_ticker': 'BABA', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'TSLA', 'exchange': 'NASDAQ'},\n",
-    "  {'stock_ticker': 'BRK-A', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'BRK-B', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'TSM', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'V', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'WMT', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'JNJ', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'JPM', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'MA', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'PG', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'UNH', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'NVDA', 'exchange': 'NASDAQ'},\n",
-    "  {'stock_ticker': 'DIS', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'HD', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'BAC', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'VZ', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'PYPL', 'exchange': 'NASDAQ'},\n",
-    "  {'stock_ticker': 'CMCSA', 'exchange': 'NASDAQ'},\n",
-    "  {'stock_ticker': 'INTC', 'exchange': 'NASDAQ'},\n",
-    "  {'stock_ticker': 'KO', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'PFE', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'NFLX', 'exchange': 'NASDAQ'},\n",
-    "  {'stock_ticker': 'T', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'ADBE', 'exchange': 'NASDAQ'},\n",
-    "  {'stock_ticker': 'PDD', 'exchange': 'NASDAQ'},\n",
-    "  {'stock_ticker': 'NKE', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'MPNGY', 'exchange': 'NYSEMKT'},\n",
-    "  {'stock_ticker': 'MPNGY', 'exchange': 'NASDAQ'},\n",
-    "  {'stock_ticker': 'TM', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'MRK', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'NVS', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'CRM', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'XOM', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'ABT', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'CSCO', 'exchange': 'NASDAQ'},\n",
-    "  {'stock_ticker': 'ASML', 'exchange': 'NASDAQ'},\n",
-    "  {'stock_ticker': 'ABBV', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'TMO', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'PEP', 'exchange': 'NASDAQ'},\n",
-    "  {'stock_ticker': 'ORCL', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'CVX', 'exchange': 'NYSE'},\n",
-    "  {'stock_ticker': 'PROSY', 'exchange': 'NYSEMKT'},\n",
-    "  {'stock_ticker': 'QCOM', 'exchange': 'NASDAQ'},\n",
-    "]"
    ]
   },
   {
@@ -210,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +161,7 @@
       "0: AAPL, exchange: NASDAQ\n",
       "Price is going up.\n",
       "Here's the object:\n",
-      "{'company_name': 'Apple Inc', 'current_price': '$127.83', 'percentage': '0.54%', 'price_movement': True, 'amount_changed': 0.69, 'market_cap': None, 'enterprise_value': None, 'revenue': 274515000000.0, 'ebitda': 77344000000.0, 'income': 57411000000.0, 'volume_purchased': 85222000.0, 'volume_outstanding': 99692000.0}\n",
+      "{'company_name': 'Apple Inc', 'current_price': '$127.83', 'percentage': '0.54%', 'price_movement': True, 'amount_changed': 0.69, 'market_cap': None, 'enterprise_value': None, 'revenue': 274515000000.0, 'ebitda': 77344000000.0, 'income': 57411000000.0, 'volume_purchased': None, 'volume_outstanding': 99692000.0}\n",
       "1: MSFT, exchange: NASDAQ\n",
       "Price is going up.\n",
       "Here's the object:\n",
@@ -228,7 +169,7 @@
       "2: AMZN, exchange: NASDAQ\n",
       "Price is going up.\n",
       "Here's the object:\n",
-      "{'company_name': 'Amazon.com Inc.', 'current_price': '$3,135.00', 'percentage': '0.99%', 'price_movement': True, 'amount_changed': 30.75, 'market_cap': None, 'enterprise_value': None, 'revenue': 347945000000.0, 'ebitda': 31875000000.0, 'income': 17377000000.0, 'volume_purchased': None, 'volume_outstanding': 3671000.0}\n",
+      "{'company_name': 'Amazon.com Inc.', 'current_price': '$3,135.00', 'percentage': '0.99%', 'price_movement': True, 'amount_changed': 30.75, 'market_cap': None, 'enterprise_value': None, 'revenue': 347945000000.0, 'ebitda': 31875000000.0, 'income': 17377000000.0, 'volume_purchased': 3017000.0, 'volume_outstanding': 3671000.0}\n",
       "3: GOOG, exchange: NASDAQ\n",
       "Price is going up.\n"
      ]
@@ -240,7 +181,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNoSuchElementException\u001b[0m                    Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-89-e0f7048f817f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstock_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-91-e0f7048f817f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstock_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m<ipython-input-86-c07394a8f051>\u001b[0m in \u001b[0;36mget_data\u001b[0;34m(stock_list)\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0mamount_changed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_element_by_xpath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/html/body/main/section/div[3]/div/div/div/div/div[2]/div/div[1]/span[2]'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[0mmarket_cap\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchange_to_float\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_element_by_xpath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/html/body/main/section/div[4]/div[1]/div[2]/div[1]/div[1]/table/tbody/tr[1]/td/span'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m         \u001b[0menterprise_value\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchange_to_float\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_element_by_xpath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/html/body/main/section/div[4]/div[1]/div[2]/div[1]/div[1]/table/tbody/tr[2]/td/span'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m         \u001b[0mrevenue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchange_to_float\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_element_by_xpath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/html/body/main/section/div[4]/div[1]/div[2]/div[1]/div[2]/table/tbody/tr[1]/td/span'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[0mebitda\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchange_to_float\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_element_by_xpath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/html/body/main/section/div[4]/div[1]/div[2]/div[1]/div[2]/table/tbody/tr[2]/td/span'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py\u001b[0m in \u001b[0;36mfind_element_by_xpath\u001b[0;34m(self, xpath)\u001b[0m\n\u001b[1;32m    392\u001b[0m             \u001b[0melement\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_element_by_xpath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'//div/td[1]'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    393\u001b[0m         \"\"\"\n\u001b[0;32m--> 394\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_element\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mby\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mBy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mXPATH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mxpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    395\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    396\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mfind_elements_by_xpath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py\u001b[0m in \u001b[0;36mfind_element\u001b[0;34m(self, by, value)\u001b[0m\n\u001b[1;32m    974\u001b[0m                 \u001b[0mby\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCSS_SELECTOR\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    975\u001b[0m                 \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'[name=\"%s\"]'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 976\u001b[0;31m         return self.execute(Command.FIND_ELEMENT, {\n\u001b[0m\u001b[1;32m    977\u001b[0m             \u001b[0;34m'using'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mby\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    978\u001b[0m             'value': value})['value']\n",
@@ -251,113 +192,39 @@
     }
    ],
    "source": [
-    "get_data(stock_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Price is going up.\n"
-     ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "(5587000.0, 6164000.0)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 78
-    }
-   ],
-   "source": [
-    "def change_to_float(string):\n",
-    "    if string[0] == '$':\n",
-    "        if string[-1] == 'B':\n",
-    "            return float(string[1:-1]) * 1000000000\n",
-    "        elif string[-1] == 'M':\n",
-    "            return float(string[1:-1]) * 1000000\n",
-    "    else:\n",
-    "        if string[-1] == 'B':\n",
-    "            return float(string[:-1]) * 1000000000\n",
-    "        elif string[-1] == 'M':\n",
-    "            return float(string[:-1]) * 1000000\n",
+    "from pymongo import MongoClient\n",
     "\n",
-    "company_name = driver.find_element_by_xpath('/html/body/main/section/div[2]/div/div[1]/h1/div[2]/a').text\n",
-    "current_price = driver.find_element_by_xpath('/html/body/main/section/div[3]/div/div/div/div/div[2]/div/div[1]/span[1]').text\n",
-    "percentage = driver.find_element_by_xpath('/html/body/main/section/div[3]/div/div/div/div/div[2]/div/div[2]/div').text\n",
-    "price_movement = True\n",
-    "if driver.find_elements_by_class_name('badge.badge-success'):\n",
-    "    price_up = driver.find_elements_by_class_name('badge.badge-success')[0].text\n",
-    "    if price_up == percentage:\n",
-    "        print('Price is going up.')\n",
-    "elif driver.find_elements_by_class_name('badge.badge-danger'):\n",
-    "    price_down = driver.find_elements_by_class_name('badge.badge-danger')[0].text\n",
-    "    if price_down == percentage:\n",
-    "        price_movement = False\n",
-    "        print('Price is going down.')\n",
-    "amount_changed = float(driver.find_element_by_xpath('/html/body/main/section/div[3]/div/div/div/div/div[2]/div/div[1]/span[2]').text[1:])\n",
-    "market_cap = change_to_float(driver.find_element_by_xpath('/html/body/main/section/div[4]/div[1]/div[2]/div[1]/div[1]/table/tbody/tr[1]/td/span').text)\n",
-    "enterprise_value = change_to_float(driver.find_element_by_xpath('/html/body/main/section/div[4]/div[1]/div[2]/div[1]/div[1]/table/tbody/tr[2]/td/span').text)\n",
-    "revenue = change_to_float(driver.find_element_by_xpath('/html/body/main/section/div[4]/div[1]/div[2]/div[1]/div[2]/table/tbody/tr[1]/td/span').text)\n",
-    "ebitda = change_to_float(driver.find_element_by_xpath('/html/body/main/section/div[4]/div[1]/div[2]/div[1]/div[2]/table/tbody/tr[2]/td/span').text)\n",
-    "income = change_to_float(driver.find_element_by_xpath('/html/body/main/section/div[4]/div[1]/div[2]/div[1]/div[2]/table/tbody/tr[3]/td/span').text)\n",
-    "volume_values = driver.find_element_by_xpath('/html/body/main/section/div[4]/div[1]/div[2]/div[2]/div[1]/table/tbody/tr[1]/td').text.split(' / ')\n",
-    "volume_purchased = change_to_float(volume_values[0])\n",
-    "volume_outstanding = change_to_float(volume_values[1])\n",
-    "volume_purchased, volume_outstanding"
+    "client = MongoClient()\n",
+    "db = client['stock_data']\n",
+    "collection = db['current_data']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "{'company_name': 'NetFlix Inc',\n",
-       " 'current_price': '$501.87',\n",
-       " 'percentage': '0.78%',\n",
-       " 'price_movement': True,\n",
-       " 'amount_changed': 3.89,\n",
-       " 'market_cap': 227070000000.0,\n",
-       " 'enterprise_value': 241320000000.0,\n",
-       " 'revenue': 23819000000.0,\n",
-       " 'ebitda': 9182000000.0,\n",
-       " 'income': 2806000000.0,\n",
-       " 'volume_purchased': 5587000.0,\n",
-       " 'volume_outstanding': 6164000.0}"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 79
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pymongo'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-92-dfeb46944d1e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mpymongo\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMongoClient\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mclient\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMongoClient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclient\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'stock_data'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcollection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'current_data'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pymongo'"
+     ]
     }
    ],
    "source": [
-    "stock_object = {\n",
-    "    'company_name': company_name,\n",
-    "    'current_price': current_price,\n",
-    "    'percentage': percentage,\n",
-    "    'price_movement': price_movement,\n",
-    "    'amount_changed': amount_changed,\n",
-    "    'market_cap': market_cap,\n",
-    "    'enterprise_value': enterprise_value,\n",
-    "    'revenue': revenue,\n",
-    "    'ebitda': ebitda,\n",
-    "    'income': income,\n",
-    "    'volume_purchased': volume_purchased,\n",
-    "    'volume_outstanding': volume_outstanding\n",
-    "}\n",
-    "stock_object"
+    "from pymongo import MongoClient\n",
+    "\n",
+    "client = MongoClient()\n",
+    "db = client['stock_data']\n",
+    "collection = db['current_data']\n",
+    "\n",
+    "db.current_data.insert(stock_object)\n",
+    "db.current_data.find_one()"
    ]
   },
   {
